- some code cleanups and some refactorings